# mywxmp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
main/: application.py  dependencies.py  middlewares.py  routes.py  schemas.py  settings.py  utils.py  xml.py
main/ai_api/: __init__.py  gemini.py
