[project]
name = "mywxmp"
version = "0.1.0"
description = "我的个人微信公众号"
authors = [
    {name = "aber", email = "me@abersheeran.com"},
]
dependencies = [
    "kui>=1.6.0",
    "pydantic-settings>=2.1.0",
    "cool>=0.4.0",
    "uvicorn>=0.25.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache2.0"}

[tool.pdm]
package-type = "application"

[tool.ruff]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.lint]
select = ["I"]
